This is my third commit.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,13 +11,16 @@
         android:id="@+id/tittleHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GoMental"
-        android:textColor= "#17517e"
-        android:textSize="30sp"
-        android:textStyle="bold"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="12dp"
 
-        android:layout_margin="12dp"/>
+        android:text="Profile"
+        android:textColor="#17517e"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <GridLayout
         android:layout_width="match_parent"
