--- a/app/src/main/res/layout/multi_lines.xml
+++ b/app/src/main/res/layout/multi_lines.xml
@@ -6,13 +6,11 @@
     android:padding="8dp"
     android:layout_height="match_parent">
 
-
-
     <TextView
         android:id="@+id/line_a"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="TextView"
+        android:layout_height="wrap_content"
+        android:text="@string/TextView"
         android:textColor="@color/myTextColor"
         android:textSize="16sp"
         android:textStyle="italic" />
@@ -20,8 +18,8 @@
     <TextView
         android:id="@+id/line_b"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/TextView"
+        android:layout_height="wrap_content"
+        android:text="TextView"
         android:textColor="@color/myTextColor2"
         android:textSize="14sp" />
 
@@ -29,8 +27,7 @@
         android:layout_width="fill_parent"
         android:orientation="horizontal"
         android:weightSum="1"
-        android:layout_height="wrap_content" >
-
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/line_c"
             android:layout_width="0dp"
@@ -38,14 +35,13 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textColor="#ffff66"
-            android:textSize="12sp"/>
+            android:textSize="12sp" />
         <TextView
             android:id="@+id/line_d"
             android:layout_width="0dp"
             android:layout_weight="0.5"
             android:layout_height="wrap_content"
-            android:text="TextView"
-
+            android:text="@string/TextView"
             android:textColor="#ffff66"
             android:textSize="12sp" />
 
@@ -55,9 +51,11 @@
             android:layout_weight="0.3"
             android:layout_height="wrap_content"
             android:text="TextView"
-
             android:textColor="#ffff66"
             android:textSize="12sp" />
+
     </LinearLayout>
+
+
 
 </LinearLayout>
