--- a/app/src/main/res/layout/activity_doctor_details.xml
+++ b/app/src/main/res/layout/activity_doctor_details.xml
@@ -37,7 +37,7 @@
         app:layout_constraintVertical_bias="0.01999998" />
 
     <ListView
-        android:id="@+id/listviewDD"
+        android:id="@+id/listViewDD"
         android:layout_width="350dp"
         android:layout_height="500dp"
         android:layout_margin="10dp"
