--- a/app/src/main/res/layout/activity_reports.xml
+++ b/app/src/main/res/layout/activity_reports.xml
@@ -36,7 +36,7 @@
         app:layout_constraintVertical_bias="0.01999998" />
 
     <TextView
-        android:id="@+id/textViewDDTitle2"
+        android:id="@+id/textViewReportsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reports and Packages"
@@ -80,7 +80,6 @@
         android:layout_height="wrap_content"
         android:text="Go To Cart"
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.095"
         app:layout_constraintStart_toStartOf="parent" />
