--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -125,7 +125,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextAppContactNumber" />
 
     <Button
-        android:id="@+id/buttonBookAppointment"
+        android:id="@+id/buttonRegister"
         android:layout_width="261dp"
         android:layout_height="55dp"
         android:background="@drawable/btn_bg"
@@ -147,7 +147,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonBookAppointment"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
         app:layout_constraintVertical_bias="0.963" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
